@@ -46,3 +46,5 @@ are passed into the model wrapper via |anchor_mode| options are Sum, All, Final 
 - Adds support for tensor.size
 
 - Adds support for torch.rand
+
+- Adds support for torch.clamp
